// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cdkCommands should call process and execa with correct arguments 1`] = `
Array [
  "npx",
  Array [
    "cdk",
    "bootstrap",
    "aws://account_id/eu-west-1",
    "--role-arn=arn:aws:iam::account_id:role/role_name",
    "--toolkit-stack-name=stack_name-cdk-toolkit",
  ],
  Object {
    "cwd": "some/path/",
  },
]
`;

exports[`cdkCommands should call process and execa with correct arguments 2`] = `
Array [
  "npx",
  Array [
    "cdk",
    "deploy",
    "--require-approval=never",
    "--role-arn=arn:aws:iam::account_id:role/role_name",
    "--toolkit-stack-name=stack_name-cdk-toolkit",
  ],
  Object {
    "cwd": "some/path/",
  },
]
`;
